Feat:nginx configured

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.2'
 services:
   flask:
-    container_name: my_devops_app
     build:
       context: .
     entrypoint: ./entrypoint.sh
@@ -16,15 +15,11 @@ services:
 #      - ./db_volume:/data/db
 #    ports:
 #      - "27017:27017"
-#  nginx:
-#    container_name: nginx
-#    build:
-#      context: .
-#      dockerfile: Docker.nginx
-#    ports:
-#      - "8080:8080"
-#    volumes:
-#      - ./certs/:/etc/nginx/certs
-#    networks:
-#      - app-network
-#    restart: unless-stopped
+  nginx:
+    build:
+      context: .
+      dockerfile: ./nginx/Dockerfile
+    ports:
+      - "8443:80"
+    volumes:
+      - ./certs/:/etc/nginx/certs
