--- a/Dockerfile-nginx
+++ b/Dockerfile-nginx
@@ -4,7 +4,8 @@ FROM nginx:alpine
 #RUN mkdir -p /etc/nginx/ssl/
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
+
+COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 EXPOSE 443
