Feat: nginx and flask cluster

--- a/Dockerfile-flask
+++ b/Dockerfile-flask
@@ -6,9 +6,9 @@ COPY ./uwsgi.ini /app
 COPY ./wsgi.py /app
 COPY ./entrypoint.sh /app
 COPY ./requirements.txt /app
-ADD devops_app /app
+COPY ./minimal_app.py /app
 
 RUN pip3 install --upgrade pip
 RUN pip3 install -r /app/requirements.txt
 RUN chmod +x ./entrypoint.sh
-RUN ls
+ENTRYPOINT ["/bin/bash","entrypoint.sh"]
