--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
@@ -16,6 +16,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image:
+        image: nginx:1.0.4
+        imagePullPolicy: Never
         ports:
-        - containerPort: 80
+        - containerPort: 5000
