--- a/nginx.conf
+++ b/nginx.conf
@@ -4,16 +4,16 @@ events {
 }
 http {
     upstream flask {
-       server flask:5001;
+       server flask-service:5001;
     }
     server {
-        listen 80;
-        listen [::]:80 default_server;
+        listen 5000;
+        listen [::]:5000 default_server;
         location /v1 {
 #             proxy_read_timeout 100;
 #   	 	    proxy_connect_timeout 100;
 # 		    proxy_send_timeout 100;
-           	proxy_pass http://flask;
+           	proxy_pass http://flask-service:5001;
            	proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header Host $host;
             proxy_http_version 1.1;
